<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayText"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                android:onClick="clearButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:backgroundTint="#e57373"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/brackets"
                android:onClick="bracketsButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/brackets"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exp"
                android:onClick="expButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/exp"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="divideButton"
                android:text="@string/div"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seven"
                android:onClick="sevenButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eight"
                android:onClick="eightButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nine"
                android:onClick="nineButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiply"
                android:onClick="multiplyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/four"
                android:onClick="fourButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/five"
                android:onClick="fiveButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/six"
                android:onClick="sixButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subtract"
                android:onClick="subtractButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/sub"
                android:textColor="@color/white"
                android:textSize="23sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one"
                android:onClick="oneButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/two"
                android:onClick="twoButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/three"
                android:onClick="threeButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sum"
                android:onClick="sumButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/sum"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/minusAndPos"
                android:onClick="minusAndPosButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/left"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zero"
                android:onClick="zeroButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dot"
                android:onClick="dotButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"

                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equals"
                android:onClick="equalButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"

                android:background="@drawable/button_background"
                android:backgroundTint="#81c784"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/displayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:autofillHints="false"
        android:inputType="none"
        android:padding="5dp"
        android:text="@string/display_text"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="31sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/backspace"
        android:onClick="backspaceButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/backspace"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>